tests/negative/neg_channel_indefinite.safe
-- Test: neg_channel_indefinite
-- Description: Channel element types must be definite.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p14:a35bd0fa
-- Expected: REJECT source_frontend_error

package Channel_Indefinite_Test

   type Index is range 1 to 8;
   type Buffer is array (Index range <>) of Integer;

   channel Data_Ch : Buffer capacity 1;


